<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_setting_page">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/user_setting_title"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/new_user_name"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/new_person_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/new_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/new_database_btn"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/new_user_name"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/change_pay"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/change_pay_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/new_user_name"
        app:layout_constraintTop_toBottomOf="@+id/new_user_name" />

    <Button
        android:id="@+id/change_pay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/user_setting_change_btn"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toEndOf="@+id/change_pay"
        app:layout_constraintTop_toBottomOf="@+id/new_user_btn" />

    <ListView
        android:id="@+id/User_List"
        android:layout_width="350dp"
        android:layout_height="380dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_pay" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_to_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="48dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />
</androidx.constraintlayout.widget.ConstraintLayout>